# tutorial-template

./: .gitignore  .readthedocs.yaml  lumache.py  pyproject.toml
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  models.rst  tools.rst  usage.rst
docs/source/_templates/: localtoc.html
lumache/: __init__.py
lumache/api/: __init__.py
lumache/models/: __init__.py  new_model.py
lumache/tools/: __init__.py  lum.py
models/: __init__.py
