[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lumache"
authors = [{name = "Graziella", email = "graziella@lumache"}]
dynamic = ["version", "description"]

[tool.setuptools.packages]
# find = {include = ["sensus"]}
find = {namespaces = false, exclude = ["test"]}