# [build-system]
# requires = ["setuptools", "setuptools-scm"]
# build-backend = "setuptools.build_meta"

# [project]
# name = "lumache"
# authors = [{name = "Graziella", email = "graziella@lumache"}]
# dynamic = ["version", "description"]

# [tool.setuptools.packages]
# # find = {include = ["sensus"]}
# find = {namespaces = false, exclude = ["test"]}


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lumache"
version = "0.2.0"
authors = [{name = "Graziella", email = "graziella@gmail.com"}]
description = "Description of the project"
readme = "README.md"
# requires-python = ">=3.8,<3.10"
requires-python = "==3.*"
classifiers = [
    "Programming Language :: Python :: 3",
    # "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    # "Programming Language :: Python :: 3.9",
    # "Programming Language :: Python :: 3.10",
    # "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
]

keywords = [
    "python",
]

dependencies = [

]

[project.optional-dependencies]
dev = [

]
test = [

]

[tool.setuptools.packages]
# find = {include = ["sensus"]}
find = {namespaces = false, exclude = ["test"]}